--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -48,13 +48,10 @@
 		display: flex;
 		flex-direction: column;
 		position: absolute;
-	}
-	& .portfolio_card--front {
-		z-index: 10;
 		backface-visibility: hidden;
 	}
+
 	& .portfolio_card--back {
-		z-index: 3;
 		background-color: $color4;
 		transform: rotateY(180deg);
 		color: $bgrColor;
